--- a/index.css
+++ b/index.css
@@ -3,19 +3,15 @@ body {
     width: auto;
     background-color: white;
 }
-.button{
-    position: center;
-}
-p{
-    color: blue;
-}
 
-.modal {
-    background: pink;
-    width: 600px;
-    max-width: 100%;
-}
-.button{
-    position: center-right;
-}
+modal{
+    p{
+        text-align: center;
+    }
+    button{
+        position: center;
+    }
     
+    height: auto;
+    width: auto;
+}
